# vote_team73

./: .env  Dockerfile  README.md  docker-compose.yml  dump.json  entrypoint.sh  pyproject.toml
_compose/configs/: nginx.conf
apps/characters/: admin.py  models.py  serializers.py  views.py
apps/voting/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
project/: settings.py  urls.py
tests/: docker_test.http  local_test.http  main.http  new_tests.http
